work on the styling feedback: uninstall Luxon, add styling to wrapper on the upload page, align thumbnail with description on the upload page, make sure video list can be clicked on the right side on the desktop at the main page

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -73,6 +73,7 @@
       width: 19%;
       height: 2.6rem;
       padding-top: 0.6rem;
+    margin-right: 0;
     }
   }
 
