--- a/src/components/Videos/Videos.scss
+++ b/src/components/Videos/Videos.scss
@@ -32,7 +32,6 @@
     color: $primary-color1;
 
     @include tablet {
-      width: 18rem;
       margin-bottom: 1rem;
     }
   }
@@ -47,6 +46,12 @@
 
   &__info {
     align-self: center;
+    @include tablet {
+      width: 25%;
+    }
+    @include desktop {
+      width: 100%;
+    }
   }
 
   &__name {
